minor changes to error pages

--- a/public/422.html
+++ b/public/422.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>422</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -12,7 +12,7 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .error-page div.dialog {
     width: 95%;
     max-width: 33em;
     color: white;
@@ -23,13 +23,13 @@
   </style>
 </head>
 
-<body class="rails-default-error-page" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(rotten.jpg); height: 100vh; background-repeat: no-repeat;
+<body class="error-page" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(rotten.jpg); height: 100vh; background-repeat: no-repeat;
 background-size: cover;">
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
       <h1>Like this produce, the change you wanted was rejected...</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <p>You might have tried to change something you didn't have access to.</p>
     </div>
   </div>
 </body>
