--- a/public/500.html
+++ b/public/500.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>500</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
-    .rails-default-error-page {
+    .error-page {
       background-color: #EFEFEF;
       color: #2E2F30;
       text-align: center;
       font-family: arial, sans-serif;
     }
   
-    .rails-default-error-page div.dialog {
+    .error-page div.dialog {
       width: 95%;
       max-width: 33em;
       color: white;
@@ -23,7 +23,7 @@
     </style>
   </head>
   
-  <body class="rails-default-error-page" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(500.jpg); height: 100vh; background-repeat: no-repeat;
+  <body class="error-page" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.01)), url(500.jpg); height: 100vh; background-repeat: no-repeat;
   background-size: cover;">
     <!-- This file lives in public/422.html -->
     <div class="dialog">
